--- a/css/task-2.css
+++ b/css/task-2.css
@@ -1,11 +1,13 @@
 .gallery {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    list-style: none;     /* убираем точки */
+    grid-template-columns: repeat(3, 360px);
+    gap: 48px 24px;
+    justify-content: center;
+    list-style: none;
     padding: 0;
     margin: 0;
   }
+  
   
   .gallery li {
     margin: 0;
@@ -13,7 +15,7 @@
   }
   
   .gallery img {
-    width: 100%;
+    width: 360px;
     height: 300px; 
     object-fit: cover;
     display: block;
